--- a/package.json
+++ b/package.json
@@ -9,13 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.6",
+    "@react-native-community/cli-server-api": "^10.0.0",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/native-stack": "^6.9.5",
+    "axios": "^1.2.1",
+    "buffer": "^5.7.1",
+    "expo": "^47.0.0",
+    "expo-av": "~13.0.2",
+    "expo-document-picker": "~11.0.1",
+    "expo-file-system": "~15.1.1",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-fs": "^2.20.0",
+    "react-native-paper": "^5.0.1",
+    "react-native-safe-area-context": "4.4.1",
+    "shim": "^0.6.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.6.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3",
+    "@types/expo": "^33.0.1",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6"
   },
   "private": true
 }
